# rust-eldewrito-master-server

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: release.yml  rust.yml  workflow.yaml
migrations/: 20220131153733_players.sql  20220131162609_player_info.sql  20220201074752_games.sql  20220201083337_game_player_result.sql  20220201110813_game_team_result.sql
migrations/mysql/: 20220131153733_players.sql  20220131162609_player_info.sql  20220201074752_games.sql  20220201083337_game_player_result.sql  20220201110813_game_team_result.sql
migrations/sqlite/: 20220131153733_players.sql  20220131162609_player_info.sql  20220201074752_games.sql  20220201083337_game_player_result.sql  20220201110813_game_team_result.sql
src/: common.rs  config.rs  database.rs  lib.rs  logging.rs  main.rs  rems.rs  response.rs
src/database/: mod.rs  mysql.rs  sqlite.rs
src/database/queries/: mod.rs  mysql.rs
src/master_server/: announce.rs  mod.rs
src/models/: announce.rs  database.rs  mod.rs  server.rs  server_info.rs
src/ranking_server/: mod.rs  stats.rs  submit.rs
src/routes/: announce.rs  list.rs  mod.rs  stats.rs  submit.rs
src/utils/: http_client.rs  mod.rs  rank.rs
