[package]
name = "rust-eldewrito-master-server"
version = "0.8.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-rc.1", features=["rustls"] }
serde = { version = "1.0.130", features = ["derive"] }
rustls = "0.20.0"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
config = "0.11"
sqlx = { version = "0.5.7", features = [ "runtime-actix-rustls", "sqlite", "migrate", "time" ] }
toml = "0.5.8"
