[package]
name = "rust-eldewrito-master-server"
version = "1.0.1"
edition = "2021"

[[bin]]
name = "rust-eldewrito-master-server"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.5.1", features=["rustls"] }
serde = { version = "1.0.130", features = ["derive"] }
rustls = "0.20.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
config = "0.11"
sqlx = { version = "0.7.4", features = [ "runtime-async-std-rustls", "sqlite", "mysql", "migrate", "time" ] }
toml = "0.8.12"
log = "0.4"
async-trait = "0.1.73"
lazy_static = "1.4.0"
